[gd_scene load_steps=4 format=3 uid="uid://ceq6ovar7iys6"]

[ext_resource type="Script" path="res://Levels/Menus/OOT.gd" id="1_vngew"]
[ext_resource type="Texture2D" path="res://Assets/Props/AnimatedBackground.tres" id="2_ahysb"]
[ext_resource type="FontFile" uid="uid://b0yxefbdevtit" path="res://Assets/Font/PixelifySans-VariableFont_wght.ttf" id="2_wlqru"]

[node name="Death" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vngew")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
texture = ExtResource("2_ahysb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -43.0
offset_right = 165.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2

[node name="Main_menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_wlqru")
theme_override_font_sizes/font_size = 32
text = "Return to main menu"
icon_alignment = 1
vertical_icon_alignment = 2

[node name="Exit_btn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_wlqru")
theme_override_font_sizes/font_size = 32
text = "Exit Game"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -264.0
offset_top = 225.0
offset_right = 264.0
offset_bottom = 285.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_wlqru")
theme_override_font_sizes/font_size = 50
text = "You ran out of time, be a little faster next time!!!"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 1662.0
offset_top = 996.0
offset_right = 1859.0
offset_bottom = 1021.0
rotation = -0.654498
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_wlqru")
theme_override_font_sizes/font_size = 20
text = "Yes, the ship blew up"

[connection signal="pressed" from="VBoxContainer/Main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit_btn" to="." method="_on_exit_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
